--- a/community-rules.html
+++ b/community-rules.html
@@ -1,59 +1,189 @@
 <!DOCTYPE html>
+
 <html lang="uk">
 <head>
-   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="google-site-verification" content="Cgm1GHNaoWAAyHS_VT9T3fKdr9k84sbNWzL71jQxgE0" />
-  <link rel="icon" type="image/png" href="https://toolmate.site/assets/images/icon.png">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="icon" type="image/png" href="https://toolmate.site/assets/images/icon.png" />
 
-  <title>Toolmate — Оренда інструментів у твоєму місті</title>
+  <title>Toolmate — Правила спільноти</title>
 
-  <meta name="description" content="Toolmate — здавай та орендуй інструменти просто. Без фейків, без посередників. Локально, через Telegram. Працює з 20 червня.">
-
-  <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, оренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, оренда верстатів, інструмент Івано-Франківськ, оренда перфоратора">
-
-  <meta name="author" content="Toolmate">
-  <link rel="stylesheet" href="/assets/styles/main.css">
-
-  <meta property="og:title" content="Toolmate — Оренда інструментів">
-  <meta property="og:description" content="Платформа для оренди справжніх інструментів. Працює з 20 червня. Локально. Через Telegram.">
-  <meta property="og:image" content="https://toolmate.site/assets/images/share.png">
-  <meta property="og:url" content="https://toolmate.site/">
-  <meta property="og:type" content="website">
-  <meta property="og:locale" content="uk_UA">
-
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Toolmate — Оренда інструментів">
-  <meta name="twitter:description" content="Локальна оренда інструментів між людьми. Через Telegram. Без фейків.">
-  <meta name="twitter:image" content="https://toolmate.site/assets/images/share.png">
-  <link rel="canonical" href="https://toolmate.site/">
-
-  <meta name="robots" content="index, follow">
+  <meta name="description" content="Правила спільноти Toolmate: етика спілкування, безпека угод, модерація, рейтинги та відгуки, заборонений контент." />
+  <meta property="og:title" content="Toolmate — Правила спільноти" />
+  <meta property="og:description" content="Правила для учасників спільноти Toolmate у Telegram та на сайті." />
+  <meta property="og:image" content="https://toolmate.site/assets/images/share.png" />
+  <meta property="og:url" content="https://toolmate.site/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:locale" content="uk_UA" />
+  <meta name="robots" content="index, follow" />
+  <link rel="stylesheet" href="/assets/styles/main.css" />
 </head>
 <body>
-    <header>
-        <h1>ПРАВИЛА СПІЛЬНОТИ</h1>
-        <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
-        <P>
-            Ці Правила встановлюють вимоги до поведінки користувачів під час 
-            використання Сервісу та його комунікаційних каналів (чати, групи, форуми, коментарі тощо).
-        </P>
-    </header>
-    <section class="section">
-        <p>
-            <b>1. Забороняється:</b><br>
-            Публікувати неправдиву або оманливу інформацію.<br>
-            Використовувати нецензурну лексику, принижувати гідність інших користувачів.<br>
-            Розміщувати матеріали, що містять дискримінацію, мову ворожнечі або заклики до насильства.<br>
-            Поширювати рекламу та спам без погодження з адміністрацією.<br>
-            Вчиняти шахрайські дії чи намагатися отримати особисті дані інших користувачів обманним шляхом.
-        </p>
-        <p>
-            <b>2. Порушення правил:</b><br>
-            Адміністрація має право:<br>
-            Видаляти будь-який контент, що порушує правила.<br>
-            Тимчасово або назавжди блокувати акаунт користувача без повернення сплачених коштів.
-        </p>
-    </section>
+  <header>
+    <h1>
+        ПРАВИЛА СПІЛЬНОТИ TOOLMATE
+        <span>
+            <img src="/assets/images/clock.svg" alt="clock">
+            6 хв читання
+        </span>
+    </h1>
+    <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів" />
+    <p>
+      Ці Правила регулюють поведінку учасників спільноти Toolmate у всіх каналах: Telegram‑бот і чати, групи, коментарі,
+      приватні повідомлення адміністрації, а також інші офіційні майданчики сервісу. Долучаючись до спільноти,
+      ви підтверджуєте, що прочитали та приймаєте ці Правила.
+    </p>
+    <p>
+        <small style="display: flex; align-items: center; justify-content: center;">
+            Останнє оновлення:
+            <img style="width: 12px; height: 12px; margin: 0 4px 0 8px;" src="/assets/images/calendar_black.svg" alt="calendar">
+            09.09.2025
+        </small>
+    </p>
+  </header>
+
+  <section class="section">
+    <h2>1. Призначення та сфера дії</h2>
+    <p>
+      Мета спільноти — безпечна, чесна і корисна взаємодія людей навколо оренди інструментів, майстерності та спільних проєктів.
+      Спільнота <em>не</em> є дошкою загальних оголошень; вона зосереджена на інструментах, оренді та практичній допомозі один одному.
+    </p>
+
+<h2>2. Ролі та доступ</h2>
+<ul>
+  <li><b>Учасник</b> — будь‑який користувач, що дотримується Правил.</li>
+  <li><b>Амбасадор</b> — допомагає новачкам, поширює корисний контент, подає приклад комунікації.</li>
+  <li><b>Модератор</b> — стежить за порядком, застосовує санкції, закриває спам та конфлікти.</li>
+  <li><b>Адміністратор</b> — приймає остаточні рішення, змінює правила, розв’язує складні кейси.</li>
+</ul>
+
+<h2>3. Базові принципи (що заохочується)</h2>
+<ul>
+  <li><b>Чесність</b> — правдиві описи стану інструменту та умов оренди.</li>
+  <li><b>Повага</b> — ввічливість, відсутність образ, емпатія до інших.</li>
+  <li><b>Пунктуальність</b> — дотримання домовлених строків видачі/повернення.</li>
+  <li><b>Дбайливість</b> — акуратне користування і повернення в належному стані.</li>
+  <li><b>Зворотний зв’язок</b> — чесні відгуки після угод, допомога з порадами.</li>
+  <li><b>Безпека</b> — пріоритет здоров’ю, власності і приватності учасників.</li>
+</ul>
+
+<h2>4. Заборонено</h2>
+<ul>
+  <li>Нецензурна лексика, приниження, цькування, мова ворожнечі, провокації насильства.</li>
+  <li>Публікація неправдивої або оманливої інформації, маніпуляційні схеми.</li>
+  <li>Спам, нав’язлива реклама, масові розсилки без згоди адміністрації.</li>
+  <li>Витребування або поширення персональних даних без згоди їх власника.</li>
+  <li>Будь‑які шахрайські дії, спроби привласнення інструментів чи коштів.</li>
+  <li>NSFW/непристойний контент, політичні/релігійні холівари, офтоп у надмірній кількості.</li>
+  <li>Порушення авторських прав, публікація чужих матеріалів без дозволу.</li>
+</ul>
+
+<h2>5. Контент та оголошення</h2>
+<ul>
+  <li>Опис інструменту має бути конкретним: стан, комплектація, обмеження використання, застава (якщо є), ціна та умови.</li>
+  <li>Фото — актуальні, без водяних знаків третіх сервісів і без чужих персональних даних у кадрі.</li>
+  <li>Оголошення, що вводять в оману, можуть бути видалені без попередження.</li>
+  <li>Самореклама/партнерські пропозиції — лише у виділених темах або за погодженням з адміністрацією.</li>
+  <li>Оф‑топ дозволено в межах здорового глузду; для тривалих дискусій — користуйтеся тематичними гілками.</li>
+</ul>
+
+<h2>6. Заборонені позиції та теми</h2>
+<p>
+  У спільноті заборонена оренда, продаж або просування: вогнепальної зброї та боєприпасів, вибухових/піротехнічних речовин,
+  наркотиків і прекурсорів, небезпечних хімікатів без ліцензій, засобів прихованого спостереження/перехоплення,
+  краденого майна, контрафакту, а також будь‑яких предметів або послуг, що суперечать законодавству України.
+</p>
+
+<h2>7. Угоди та безпека</h2>
+<ul>
+  <li>Передача інструменту відбувається лише після погодження умов. Фіксуйте стан інструменту фото/відео при видачі та поверненні.</li>
+  <li>Місце зустрічі обирайте безпечне та публічне; уникайте великих передоплат незнайомим людям.</li>
+  <li>За потреби сторони можуть обмінятися базовими ідентифікаційними даними для безпеки угоди.</li>
+  <li>Суперечки вирішуйте спершу шляхом діалогу; за необхідності — звертайтесь до підтримки або компетентних органів.</li>
+</ul>
+
+<h2>8. Рейтинги та відгуки</h2>
+<ul>
+  <li>Відгуки мають бути чесними, фактологічними та без образ.</li>
+  <li>Заборонено вимагати або торгувати відгуками. Виявлену накрутку буде видалено, а обліковки — обмежено.</li>
+  <li>Адміністрація може приховати або видалити відгуки, що містять наклеп, мову ворожнечі, персональні дані чи комерційні таємниці.</li>
+</ul>
+
+<h2>9. Модерація та санкції</h2>
+<p>Модерація спрямована на підтримку конструктивного середовища. Застосовується прогресивна шкала санкцій:</p>
+<ol>
+  <li><b>Нагадування</b> і корекція поведінки.</li>
+  <li><b>Попередження</b> (письмове в особисті/у треді).</li>
+  <li><b>Тім-аут</b> (тимчасові обмеження на публікації/коментарі).</li>
+  <li><b>Тимчасове блокування</b> (1–30 днів).</li>
+  <li><b>Постійний бан</b> без повернення сплачених внесків/платежів за послуги Сервісу.</li>
+</ol>
+<p>
+  Санкції можуть застосовуватися відразу на вищому рівні у випадках грубих порушень: шахрайство, погрози, мова ненависті,
+  заклики до насильства, публікація забороненого контенту, повторні порушення після попереджень.
+</p>
+
+<h2>10. Скарги та апеляції</h2>
+<ul>
+  <li>На контент: використовуйте кнопку скарги або звертайтеся до модераторів у приват.</li>
+  <li>На учасника: надайте факти (скріни, лінки, опис ситуації). Анонімні звіти розглядаються на розсуд модерації.</li>
+  <li>Апеляція на рішення модерації подається протягом 7 днів із моменту застосування санкції; рішення адміністратора є остаточним.</li>
+</ul>
+
+<h2>11. Проєкти та івенти спільноти</h2>
+<ul>
+  <li>Створюйте треди/події для спільних робіт (ремонти, майстер-класи, волонтерські ініціативи).</li>
+  <li>В описі вказуйте мету, місце, потрібні інструменти, правила безпеки та відповідальних.</li>
+  <li>Організатор несе відповідальність за координацію та дотримання базових правил безпеки.</li>
+</ul>
+
+<h2>12. Приватність та дані</h2>
+<ul>
+  <li>Не публікуйте персональні дані без згоди їх власника. Скриншоти приватних листувань — лише за згодою сторін.</li>
+  <li>Дані, отримані під час врегулювання спорів, використовуйте виключно з легітимною метою та з дотриманням конфіденційності.</li>
+  <li>Детальні правила обробки даних — у Політиці приватності Toolmate.</li>
+</ul>
+
+<h2>13. Самореклама та партнерства</h2>
+<ul>
+  <li>Самореклама допустима у межах тематики (інструменти, майстерні, ремонтні послуги) і у спеціальних каналах/тредах.</li>
+  <li>Платні пости, знижки, партнерства — тільки за погодженням із адміністрацією.</li>
+  <li>Масова реклама нерелевантних сервісів — заборонена.</li>
+</ul>
+
+<h2>14. Мовна політика</h2>
+<p>Основна мова спільноти — українська. Англійська допускається за потреби. Поважайте мовний вибір співрозмовника; не використовуйте мову як інструмент тиску.</p>
+
+<h2>15. Вікові обмеження</h2>
+<p>Спільнота призначена для повнолітніх (18+). Якщо ви не досягли 18 років — не здійснюйте угод і не передавайте/не приймайте інструменти.</p>
+
+<h2>16. Відповідальність сервісу</h2>
+<p>
+  Спільнота та адміністратори не є стороною угод між користувачами й не несуть відповідальності за розрахунки, застави,
+  крадіжку або пошкодження речей, а також за безпеку зустрічей. Користувачі самостійно несуть відповідальність за свої дії.
+  Детальні застереження наведені в Умовах оренди Toolmate.
+</p>
+
+<h2>17. Зміни правил</h2>
+<p>
+  Адміністрація може змінювати ці Правила. Оновлена версія публікується на офіційних ресурсах Toolmate та набирає чинності з моменту публікації.
+  Продовження користування спільнотою означає згоду з оновленими Правилами.
+</p>
+
+<h2>18. Контакти</h2>
+<p>
+  Для звернень щодо модерації та співпраці використовуйте офіційний бот підтримки або електронну пошту <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a>.
+</p>
+
+<hr />
+<h3>Коротко (TL;DR)</h3>
+<ul>
+  <li>Будьте чесними, ввічливими та пунктуальними.</li>
+  <li>Рекламуйтеся тільки там, де це дозволено.</li>
+  <li>Фіксуйте стан інструментів при видачі та поверненні.</li>
+  <li>За грубі порушення — бан без повернення платежів за послуги сервісу.</li>
+</ul>
+
+  </section>
 </body>
 </html>
