--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="uk">
 <head>
-   <meta charset="UTF-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="google-site-verification" content="Cgm1GHNaoWAAyHS_VT9T3fKdr9k84sbNWzL71jQxgE0" />
   <link rel="icon" type="image/png" href="https://toolmate.site/assets/images/icon.png">
@@ -9,9 +9,7 @@
   <title>Toolmate — Оренда інструментів у твоєму місті</title>
 
   <meta name="description" content="Toolmate — здавай та орендуй інструменти просто. Без фейків, без посередників. Локально, через Telegram. Працює з 20 червня.">
-
   <meta name="keywords" content="оренда інструментів, інструмент напрокат, взяти перфоратор, оренда інструменту Україна, Toolmate, телеграм оренда, оренда шуруповерта, оренда верстатів, інструмент Івано-Франківськ, оренда перфоратора">
-
   <meta name="author" content="Toolmate">
   <link rel="stylesheet" href="/assets/styles/main.css">
 
@@ -22,7 +20,7 @@
   <meta property="og:type" content="website">
   <meta property="og:locale" content="uk_UA">
 
-  <meta name="twitter:card" content="summary_large_image">  
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Toolmate — Оренда інструментів">
   <meta name="twitter:description" content="Локальна оренда інструментів між людьми. Через Telegram. Без фейків.">
   <meta name="twitter:image" content="https://toolmate.site/assets/images/share.png">
@@ -31,125 +29,150 @@
   <meta name="robots" content="index, follow">
 </head>
 <body>
-    <header>
-       <h1>ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ</h1>
-       <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
-        <p>
-            Ця Політика описує обробку даних у межах Telegram-бота TOOLMATE. 
-            Ми не контролюємо Telegram і платіжні сервіси (вони — незалежні контролери). 
-            Користувач несе відповідальність за дані, які добровільно надсилає в Бот. 
-            Ми застосовуємо розумні заходи безпеки, але не гарантуємо абсолютної захищеності; 
-            у межах, дозволених законом, не відповідаємо за наслідки, що виникають поза нашою 
-            зоною контролю. Обробка здійснюється згідно із законом України та, коли застосовно, GDPR.
-        </p>
-    </header>
-    <section class="section">
-        <p>
-            <b>1. Хто ми</b><br>
-            Адміністрація Сервісу – TOOLMATE, контактна адреса: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a>.
-            Ми є контролером персональних даних, що обробляються під час роботи Сервісу.
-        </p>
-        <p class="muted">Останнє оновлення: 31 серпня 2025 р.</p>
-        <p>
-            <b>2. Які дані ми збираємо</b><br>
-            Ми можемо збирати наступні дані:<br>
-            Прізвище, ім’я, по батькові або назву компанії<br>
-            Номер телефону<br>
-            Дані локації видачі інструменту (якщо ви надаєте доступ)<br>
-            Ідентифікатор облікового запису (акаунта), наприклад, Telegram ID/username<br>
-            Інші дані, які ви добровільно надаєте при користуванні Сервісом
-        </p>
-        <p> 
-            <b>3. Мета збору даних</b><br>
-            Ми обробляємо ваші дані для:<br>
-            Реєстрації та ідентифікації користувачів<br>
-            Надання доступу до функцій Сервісу<br>
-            Виконання договорів оренди між користувачами<br>
-            Зв’язку з вами з питань роботи Сервісу<br>
-            Виконання вимог законодавства
-        </p>
-        <p>
-            <b>4. Правові підстави обробки</b><br>
-            Ми обробляємо персональні дані на підставі:<br>
-            Вашої згоди (акцепт цієї Політики та/або публічної оферти)<br>
-            Необхідності виконання договору між вами та іншими користувачами через Сервіс<br>
-            Виконання наших законних обов’язків<br>
-            <li><b>Законний інтерес</b> — забезпечення безпеки сервісу, запобігання шахрайству, ведення технічних журналів, модерація контенту. Ми провели тест балансування інтересів і вважаємо, що обробка є необхідною й пропорційною цілям.</li>
-        </p>
-        <p>
-            <b>5. Передача даних третім сторонам</b><br>
-            Ми не передаємо ваші дані третім особам, окрім:<br>
-            Виконання законних вимог державних органів<br>
-            Виконання умов договору (наприклад, передача контактів між Орендодавцем і Орендарем після підтвердження угоди)<br>
-            Обробки платежів через платіжні сервіси (якщо такі застосовуються)<br>
-            Ми не є стороною договорів оренди між користувачами; обмін контактами здійснюється виключно для реалізації підтверджених угод.
-            <li><b>Постачальники-процесори</b> (хостинг, сховище) — обробляють дані за нашим дорученням на підставі договорів зобов’язання щодо конфіденційності та безпеки.</li>
-        </p>
-        <p>
-            <b>6. Зберігання та захист даних</b><br>
-            Персональні дані зберігаються в електронному вигляді на захищених серверах.<br>
-            Доступ до даних мають лише уповноважені адміни сервісу TOOLMATE.<br>
-            Для захисту використовуються сучасні технічні та організаційні заходи: шифрування, контроль доступу, журнали активності.
-        </p>
-        <p><b>6.1. Строки зберігання</b><br>
-            Облікові ідентифікатори Telegram — доки акаунт активний або до видалення за запитом;<br>
-            Дані заявок/угод — до 36 міс. після архівації (для вирішення спорів/запобігання зловживанням);
-        </p>
-        <p>
-            <b>7. Права користувача</b><br>
-            Ви маєте право:<br>
-            Дізнатися, які ваші дані ми зберігаємо<br>
-            Вимагати їх виправлення або видалення<br>
-            Відкликати згоду на обробку<br>
-            Подати скаргу до уповноваженого органу<br>
-            Для реалізації прав напишіть нам на: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a>
-        </p>
+  <header>
+    <h1>
+        ПОЛІТИКА КОНФІДЕНЦІЙНОСТІ
+        <span>
+            <img src="/assets/images/clock.svg" alt="clock">
+            4 хв читання
+        </span>
+    </h1>
+    <img class="logo" src="./assets/images/logo.jpg" alt="Toolmate — сервіс оренди інструментів">
+    <p>
+      Ця Політика описує обробку даних у межах Telegram-бота TOOLMATE.
+      Ми не контролюємо Telegram і платіжні сервіси (вони — незалежні контролери).
+      Користувач несе відповідальність за дані, які добровільно надсилає в Бот.
+      Ми застосовуємо розумні заходи безпеки, але не гарантуємо абсолютної захищеності;
+      у межах, дозволених законом, не відповідаємо за наслідки, що виникають поза нашою
+      зоною контролю. Обробка здійснюється згідно із законом України та, коли застосовно, GDPR.
+    </p>
+    <p class="muted">
+        <small style="display: flex; align-items: center; justify-content: center;">
+            Останнє оновлення:
+            <img style="width: 12px; height: 12px; margin: 0 4px 0 8px;" src="/assets/images/calendar_black.svg" alt="calendar">
+            09.09.2025
+        </small>
+    </p>
+  </header>
 
-        <p>
-            <b>8. Відповідальність користувача</b><br>
-            Забороняється надсилати в чат із Ботом надмірні або чутливі дані (паспортні дані, банківські реквізити, медична інформація тощо).
-            Якщо ви все ж добровільно надсилаєте такі відомості, ви робите це на власний ризик. У межах, дозволених законом, TOOLMATE
-            не несе відповідальності за наслідки розкриття вами таких даних.
-        </p>
+  <section class="section">
+    <h2>1. Хто ми</h2>
+    <p>
+      Адміністрація Сервісу – TOOLMATE, контактна адреса: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a>.
+      Ми є контролером персональних даних, що обробляються під час роботи Сервісу.
+    </p>
 
-        <section aria-labelledby="war-locations">
-        <h3 id="war-locations">8.1. Застереження щодо локацій під час воєнного стану (Україна)</h3>
-        <p>
-            Ми не вимагаємо і не запитуємо точну геолокацію через функціонал Бота; для роботи Сервісу достатньо узагальненої адреси
-            (район/вулиця без номера) або публічної точки зустрічі. Будьте максимально обережні з будь-якими локаційними даними,
-            які ви публікуєте або передаєте через Сервіс.
-        </p>
-        <ul>
-            <li>Не надсилайте точні координати, карти, маршрути, розклад переміщень, фото/відео з геоприв’язкою чи метаданими (EXIF),
-                що можуть розкривати місця дислокації підрозділів, складів, критичної інфраструктури або інші режимні об’єкти.</li>
-            <li>Використовуйте наближені локації та публічні нейтральні точки видачі; прибирайте геомітки/метадані з файлів; не
-                домовляйтесь про зустрічі поблизу військових/режимних об’єктів.</li>
-            <li>За можливості узгоджуйте деталі в приватному спілкуванні після підтвердження угоди, без розкриття надмірних даних.</li>
-        </ul>
-        <p>
-            Ми не контролюємо зміст повідомлень, які ви добровільно надсилаєте через Бота. Усі ризики та наслідки розкриття
-            локаційної інформації несете ви самостійно. У межах, дозволених законом, TOOLMATE не несе відповідальності за будь-які
-            збитки, завдані публікацією або передачею вами локаційних даних. Ми залишаємо за собою право видаляти контент із
-            чутливими геоданими, обмежувати доступ або блокувати облікові записи при виявленні ризиків безпеці, а також виконувати
-            законні вимоги уповноважених органів.
-        </p>
-        </section>
-        <p>
-            <b>9. Зміни Політики</b><br>
-            Ми можемо оновлювати цю Політику. Нова редакція набирає чинності з моменту її публікації на сайті або в інтерфейсі Сервісу.
-        </p>
-        <p>
-            <b>10. Контакти</b><br>
-            Якщо у вас є питання або скарги щодо обробки даних, звертайтесь:<br>
-            Email: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a><br>
-            Адреса: м. Івано-Франківськ<br>
-        </p>
-        <p>
-            <b>11. Вікові обмеження</b><br>
-            Сервіс призначений для осіб від 18 років. Якщо нам стане відомо про обробку 
-            даних неповнолітнього без згоди законного представника, ми видалимо такі дані.
-        </p>
+    <h2>2. Які дані ми збираємо</h2>
+    <p>Ми можемо збирати наступні дані:</p>
+    <ul>
+      <li>Прізвище, ім’я, по батькові або назву компанії</li>
+      <li>Номер телефону</li>
+      <li>Дані локації видачі інструменту (якщо ви надаєте доступ)</li>
+      <li>Ідентифікатор облікового запису (акаунта), наприклад, Telegram ID/username</li>
+      <li>Інші дані, які ви добровільно надаєте при користуванні Сервісом</li>
+    </ul>
 
+    <h2>3. Мета збору даних</h2>
+    <p>Ми обробляємо ваші дані для:</p>
+    <ul>
+      <li>Реєстрації та ідентифікації користувачів</li>
+      <li>Надання доступу до функцій Сервісу</li>
+      <li>Виконання договорів оренди між користувачами</li>
+      <li>Зв’язку з вами з питань роботи Сервісу</li>
+      <li>Виконання вимог законодавства</li>
+    </ul>
+
+    <h2>4. Правові підстави обробки</h2>
+    <p>Ми обробляємо персональні дані на підставі:</p>
+    <ul>
+      <li>Вашої згоди (акцепт цієї Політики та/або публічної оферти)</li>
+      <li>Необхідності виконання договору між вами та іншими користувачами через Сервіс</li>
+      <li>Виконання наших законних обов’язків</li>
+      <li><b>Законний інтерес</b> — забезпечення безпеки сервісу, запобігання шахрайству, ведення технічних журналів, модерація контенту. Ми провели тест балансування інтересів і вважаємо, що обробка є необхідною й пропорційною цілям.</li>
+    </ul>
+
+    <h2>5. Передача даних третім сторонам</h2>
+    <p>Ми не передаємо ваші дані третім особам, окрім:</p>
+    <ul>
+      <li>Виконання законних вимог державних органів</li>
+      <li>Виконання умов договору (наприклад, передача контактів між Орендодавцем і Орендарем після підтвердження угоди)</li>
+      <li>Обробки платежів через платіжні сервіси (якщо такі застосовуються)</li>
+    </ul>
+    <p>Ми не є стороною договорів оренди між користувачами; обмін контактами здійснюється виключно для реалізації підтверджених угод.</p>
+    <ul>
+      <li><b>Постачальники-процесори</b> (хостинг, сховище) — обробляють дані за нашим дорученням на підставі договорів зобов’язання щодо конфіденційності та безпеки.</li>
+    </ul>
+
+    <h2>6. Зберігання та захист даних</h2>
+    <ul>
+      <li>Персональні дані зберігаються в електронному вигляді на захищених серверах.</li>
+      <li>Доступ до даних мають лише уповноважені адміни сервісу TOOLMATE.</li>
+      <li>Для захисту використовуються сучасні технічні та організаційні заходи: шифрування, контроль доступу, журнали активності.</li>
+    </ul>
+
+    <h3>6.1. Строки зберігання</h3>
+    <ul>
+      <li>Облікові ідентифікатори Telegram — доки акаунт активний або до видалення за запитом;</li>
+      <li>Дані заявок/угод — до 36 міс. після архівації (для вирішення спорів/запобігання зловживанням);</li>
+    </ul>
+
+    <h2>7. Права користувача</h2>
+    <p>Ви маєте право:</p>
+    <ul>
+      <li>Дізнатися, які ваші дані ми зберігаємо</li>
+      <li>Вимагати їх виправлення або видалення</li>
+      <li>Відкликати згоду на обробку</li>
+      <li>Подати скаргу до уповноваженого органу</li>
+    </ul>
+    <p>Для реалізації прав напишіть нам на: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a></p>
+
+    <h2>8. Відповідальність користувача</h2>
+    <p>
+      Забороняється надсилати в чат із Ботом надмірні або чутливі дані (паспортні дані, банківські реквізити, медична інформація тощо).
+      Якщо ви все ж добровільно надсилаєте такі відомості, ви робите це на власний ризик. У межах, дозволених законом, TOOLMATE
+      не несе відповідальності за наслідки розкриття вами таких даних.
+    </p>
+
+    <section aria-labelledby="war-locations">
+      <h3 id="war-locations">8.1. Застереження щодо локацій під час воєнного стану (Україна)</h3>
+      <p>
+        Ми не вимагаємо і не запитуємо точну геолокацію через функціонал Бота; для роботи Сервісу достатньо узагальненої адреси
+        (район/вулиця без номера) або публічної точки зустрічі. Будьте максимально обережні з будь-якими локаційними даними,
+        які ви публікуєте або передаєте через Сервіс.
+      </p>
+      <ul>
+        <li>Не надсилайте точні координати, карти, маршрути, розклад переміщень, фото/відео з геоприв’язкою чи метаданими (EXIF),
+          що можуть розкривати місця дислокації підрозділів, складів, критичної інфраструктури або інші режимні об’єкти.</li>
+        <li>Використовуйте наближені локації та публічні нейтральні точки видачі; прибирайте геомітки/метадані з файлів; не
+          домовляйтесь про зустрічі поблизу військових/режимних об’єктів.</li>
+        <li>За можливості узгоджуйте деталі в приватному спілкуванні після підтвердження угоди, без розкриття надмірних даних.</li>
+      </ul>
+      <p>
+        Ми не контролюємо зміст повідомлень, які ви добровільно надсилаєте через Бота. Усі ризики та наслідки розкриття
+        локаційної інформації несете ви самостійно. У межах, дозволених законом, TOOLMATE не несе відповідальності за будь-які
+        збитки, завдані публікацією або передачею вами локаційних даних. Ми залишаємо за собою право видаляти контент із
+        чутливими геоданими, обмежувати доступ або блокувати облікові записи при виявленні ризиків безпеці, а також виконувати
+        законні вимоги уповноважених органів.
+      </p>
     </section>
+
+    <h2>9. Зміни Політики</h2>
+    <p>
+      Ми можемо оновлювати цю Політику. Нова редакція набирає чинності з моменту її публікації на сайті або в інтерфейсі Сервісу.
+    </p>
+
+    <h2>10. Контакти</h2>
+    <p>
+      Якщо у вас є питання або скарги щодо обробки даних, звертайтесь:<br>
+      Email: <a href="mailto:toolmate.rent@gmail.com">toolmate.rent@gmail.com</a><br>
+      Адреса: м. Івано-Франківськ
+    </p>
+
+    <h2>11. Вікові обмеження</h2>
+    <p>
+      Сервіс призначений для осіб від 18 років. Якщо нам стане відомо про обробку
+      даних неповнолітнього без згоди законного представника, ми видалимо такі дані.
+    </p>
+  </section>
 </body>
 </html>
