--- a/rental-conditions.html
+++ b/rental-conditions.html
@@ -28,7 +28,7 @@
   <p>Приймаючи ці умови, ви підтверджуєте, що ознайомлені з ними, розумієте їх і зобов’язуєтесь їх дотримуватися.</p>
   <p>
     <small style="display: flex; align-items: center; justify-content: center;">
-        Дата набрання чинності:
+        Останнє оновлення:
         <img style="width: 12px; height: 12px; margin: 0 4px 0 8px;" src="/assets/images/calendar_black.svg" alt="calendar">
          09.09.2025
     </small>
