--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
             <div class="progress-bar" id="progress-bar"></div>
         </div>
     </section>
-    <span class="tooltip" data-tooltip="Бот в тестовому режимі">
-      <span class="btn disabled">Запустити бот</span>
+    <span class="tooltip" data-tooltip="Залітай!">
+      <a href="https://t.me/toolmatechat_bot" target="_blank" rel="noopener" class="btn">Перейти в Бот -></a>
     </span>
-    <p style="margin-top: 1rem; font-size: 0.9rem;">Реліз — 20 червня • Перші 5 отримають бонуси</p>
   </header>
 
   <section class="section how-it-works">
@@ -67,18 +66,22 @@
   <section class="section">
     <h2>Чому Toolmate</h2>
     <p>— Інтуїтивно зрозумілий інтерфейс для пошуку, оренди та управління інструментами</p>
-    <p>— Потужна логіка — статуси заявок, фільтри, таймери, повідомлення</p>
+    <p>— Потужна логіка — статуси заявок, фільтри, таймери, рейтенги</p>
     <p>— Без реклами та фейків</p>
     <p>— Через Telegram — швидко, мобільно і просто</p>
     <p>— Інструменти поруч — локально у твоєму районі</p>
-    <p>— Перші 5 користувачів — приємні бонуси</p>
   </section>
 
   <section class="section faq">
     <h2>FAQ</h2>
-    <p><strong>Чи безпечно?</strong> Так, є правила і живий сапорт</p>
+    <p><strong>Це безпечно?</strong> Так. Діють Правила спільноти та Умови оренди, працює модерація, рейтинги й живий сапорт. Рекомендуємо зустріч у публічному місці та фото/відео фіксацію стану інструменту під час видачі/повернення.</p>
     <p><strong>Що якщо нема інструменту?</strong> Можемо надати штатний для тесту</p>
-    <p><strong>Скільки це коштує?</strong> Перші 3 місяці — безкоштовно</p>
+    <p><strong>Скільки це коштує?</strong> Бот безкоштовний, платиш тільки за оренду</p>
+    <p><strong>Як почати?</strong> У нас на сайті є простий гайд як користуватися ботом. Можна глянути <a href="/">тут</a>.</p>
+    <p><strong>Чи потрібна застава?</strong> За домовленістю сторін і як зазначено в оголошенні. Сервіс не зберігає заставу — розрахунки напряму між користувачами.</p>
+    <p><strong>Як передають і повертають інструмент?</strong> У зазначеному на мапі місці й час до заявки, перевіряєте комплектацію, фіксуєте стан фото/відео; за бажанням підписуєте акт приймання-передачі.</p>
+    <p><strong>Де працює сервіс?</strong> Локально у вашому місті через Telegram; шукайте інструменти поруч або здавайте в оренду.</p>
+    <p><strong>Як залишити відгук?</strong> Після завершення оренди прямо в коментарі до угоди.</p>
   </section>
 
   <section class="section">
@@ -91,13 +94,13 @@
       </script>
     </div>
     <br><br>
-    <span class="tooltip" data-tooltip="Бот в тестовому режимі">
-      <span class="btn disabled">Запустити бот</span>
+    <span class="tooltip" data-tooltip="Орендуй, здавай в оренду!">
+      <a href="https://t.me/toolmatechat_bot" target="_blank" rel="noopener" class="btn">Перейти в Бот -></a>
     </span>
     <br><br>
     <a href="https://t.me/toolmate_comunity" class="btn">Перейти в комʼюніті</a>
     <div class="socials">
-      <a href="https://t.me/toolmate_comunity">Telegram</a>
+      <a href="https://t.me/toolmate_comunity" target="_blank" rel="noopener">Telegram</a>
       <span class="tooltip" data-tooltip="Скоро зʼявиться, працюємо над цим">
         <span class="btn disabled link">Instagram</span>
       </span>
@@ -124,7 +127,7 @@
       const remaining = releaseDate - now;
 
       if (remaining <= 0) {
-        countdownText.textContent = '🚀 Бот працює в тестовому режимі! Невдовзі кожен зможе спробувати;)';
+        countdownText.textContent = '🚀 Бот вже працює!';
         progressBar.style.width = '100%';
         return;
       }
