--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <label for="nav-toggle" class="nav__close" aria-label="Закрити меню">✕</label>
         <ul class="nav__list">
           <li><a class="nav__link" href="/">Головна</a></li>
-          <li><a class="nav__link" href="/rental-conditions">Правила Оренди</a></li>
+          <li><a class="nav__link" href="/rental-conditions">Умови Оренди</a></li>
           <li><a class="nav__link" href="/community-rules">Правила Спіьноти</a></li>
-          <li><a class="nav__link" href="/privacy-policy">Політика Приватності</a></li>
+          <li><a class="nav__link" href="/privacy-policy">Політика Конфіденційності</a></li>
         </ul>
       </nav>
 
